--- a/app/src/main/res/layout/list_item_child.xml
+++ b/app/src/main/res/layout/list_item_child.xml
@@ -6,12 +6,12 @@
     android:layout_height="wrap_content">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/parentRecyclerView"
+        android:id="@+id/childRecyclerView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="4dp"
-        android:scrollbars="horizontal"
+        android:scrollbars="none"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
