--- a/app/src/main/res/layout/list_item_tag_place_holder.xml
+++ b/app/src/main/res/layout/list_item_tag_place_holder.xml
@@ -15,21 +15,16 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/tagImageView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_background" />
+            android:layout_height="match_parent" />
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/nameTextView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:background="@android:color/transparent"
-        android:text="name"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="@dimen/tag_card_name_font_size"
