Add tag food list design and API

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="tag_card_width">180dp</dimen>
     <dimen name="tag_card_height">150dp</dimen>
     <dimen name="tag_card_name_font_size">14sp</dimen>
+    <dimen name="tag_food_card_height">200dp</dimen>
 </resources>
